# Shrub

./: Cargo.toml  Readme.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: inventory.rs  item.rs  itemdata.rs  itemdata_reflection.rs  itemtype.rs  lib.rs
src/utils/: add_data.rs  mod.rs
